--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "noImplicitAny": false,
     "esModuleInterop": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/__tests__/**"]
 }
